Bug Fix: Auto zoom on iOS when clicking an input form, replace tab nav scroll persistence with a more performant version

--- a/styles/utils/uncategorized.css
+++ b/styles/utils/uncategorized.css
@@ -27,4 +27,11 @@
 	.noring {
 		@apply focus:ring-0 focus:ring-offset-0;
 	}
+
+	/* iOS fix for zoom on input field */
+	@supports (-webkit-touch-callout: none) {
+		input[type='text'] {
+			@apply text-base py-1 sm:py-1.5;
+		}
+	}
 }
